--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.6.2",
     "cloudinary": "^1.41.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
