--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bingmaps": "^3.6.1",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "uuid": "^9.0.1",
