--- a/api/package.json
+++ b/api/package.json
@@ -11,13 +11,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.2",
         "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.0.3",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "sanitize-html": "^2.11.0"
