--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^2.9.1",
