--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
+    "mui-file-input": "^4.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "sanitize-html": "^2.11.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
