--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,11 @@
     "mui-file-input": "^4.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
-    "react-bingmaps": "^3.6.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "sanitize-html": "^2.11.0",
     "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
