--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "form-data": "^4.0.0",
     "formik": "^2.4.5",
     "mui-file-input": "^4.0.3",
     "notistack": "^3.0.1",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.13.8",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "yup": "^1.3.2"
