--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "dependencies": {
         "axios": "^1.6.2",
         "bcrypt": "^5.1.1",
+        "cities.json": "^1.1.31",
         "cloudinary": "^1.41.0",
         "concurrently": "^8.2.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "countries-list": "^3.0.6",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-mongo-sanitize": "^2.2.0",
