--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "scripts": {
         "server": "node index.js",
         "server-dev": "nodemon index.js",
+        "client": "npm run preview --prefix client",
         "client-dev": "npm run dev --prefix client",
         "dev": "concurrently \"npm run server-dev\" \"npm run client-dev\"",
-        "client-preview": "npm run preview --prefix client",
-        "build": "npm run build --prefix client",
-        "setup": "npm install && npm install --prefix client",
+        "build": "npm install --prefix client && npm run build --prefix client",
         "stop": "pm2 stop TourExplore 2>/dev/null; pm2 delete TourExplore 2>/dev/null;",
-        "prod": "npm run setup && npm run stop; npm run build && NODE_ENV=production pm2 start index.js --name TourExplore"
+        "prod": "npm install && npm run stop; NODE_ENV=production pm2 start index.js --name TourExplore"
     },
     "keywords": [],
     "author": "",
