--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "build": "npm install --prefix client && npm run build --prefix client",
         "stop": "pm2 stop TourExplore; pm2 delete TourExplore",
         "prod": "npm install && npm run stop; NODE_ENV=production pm2 start index.js --name TourExplore",
-        "prod-reder": "npm install && NODE_ENV=production node index.js"
+        "prod-render": "npm install && NODE_ENV=production node index.js"
     },
     "keywords": [],
     "author": "",
